--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .header {
-  min-height: 100vh;
+  min-height: 70vh;
   min-width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
     url("images/banner.png");
@@ -158,7 +158,7 @@ nav .fa {
   width: 80%;
   margin: auto;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 70px;
 }
 
 h1 {
@@ -626,4 +626,17 @@ h3 {
 .form-items a:hover {
   color: #fff;
   background-color: #f44336;
+}
+
+body {
+  width: 70%;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  background-color: #f8d2cf;
+  padding-top: 50px;
+}
+
+section {
+  border-radius: 20px;
 }
